--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             const correctPassword = 'clave123';
 
             if (passwordInput === correctPassword) {
-                window.location.href = 'PAGINAPRINCIPAL.HTML';
+                window.location.href = 'paginaprincipal.html';
             } else {
                 errorMessage.style.display = 'block';
             }
